# sauron

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: engine.rs  fs_monitor.rs  fs_scan.rs  main.rs  report.rs
